--- a/webapp/Views/PengurusanKakitanganSambilan/UrusBonus.cshtml
+++ b/webapp/Views/PengurusanKakitanganSambilan/UrusBonus.cshtml
@@ -103,8 +103,9 @@
                                             </tr>
                                             <tr>
                                                 <th class="col-sm-1">#</th>
-                                                <th class="col-sm-10">Bulan</th>
-                                                <th class="col-sm-1">Tindakan</th>
+                                                <th class="col-sm-8">Bulan</th>
+                                                <th class="col-sm-1">Muktamad</th>
+                                                <th class="col-sm-2">Tindakan</th>
                                             </tr>
                                         </thead>
                                         <tbody>
@@ -117,11 +118,25 @@
                                                     <td>
                                                         @Html.Label(x.MonthName)
                                                     </td>
+                                                    <td align="center">
+                                                        @if (x.IsMuktamad)
+                                                        {
+                                                            <i class="fa fa-check"></i>
+                                                        }
+                                                    </td>
                                                     <td>
-                                                        <a class="btn btn-xs btn-default btn-circle" 
-                                                           href='@Url.Action("BonusSambilanDetail", "KakitanganSambilan", 
-                                                                new { month = x.MonthNumber.ToString("D2"), year = ViewBag.Tahun })' 
+                                                        <a class="btn btn-xs btn-default btn-circle"
+                                                           href='@Url.Action("BonusSambilanDetail", "KakitanganSambilan",
+                                                                new { month = x.MonthNumber.ToString("D2"), year = ViewBag.Tahun })'
                                                            title="Transaksi Sambilan"><i class="fa fa-money"></i></a>
+
+                                                        @if (x.IsMuktamad)
+                                                        {
+                                                            <a class="btn btn-success"
+                                                               href='@Url.Action("PrintBonus", "KakitanganSambilan",
+                                                                new { bulanBonus = x.MonthNumber.ToString(), tahunBonus = ViewBag.Tahun })'
+                                                               title="Transaksi Sambilan"><i class="fa fa-file-pdf-o"></i>  Excel</a>
+                                                        }
                                                     </td>
                                                 </tr>
                                             }
