--- a/webapp/Views/PengurusanKakitanganSambilan/ListTransaksiSambilan.cshtml
+++ b/webapp/Views/PengurusanKakitanganSambilan/ListTransaksiSambilan.cshtml
@@ -2,158 +2,158 @@
 <!-- MAIN CONTENT -->
 <div id="content">
 
-	<div class="row">
-		<div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
-			<h1 class="page-title txt-color-blueDark">
-				<i class="fa fa-table fa-fw "></i>
-				Transaksi Sambilan
-				<span>
-					>
-					Sejarah Transaksi Sambilan
-				</span>
-			</h1>
-		</div>
-	</div>
-	@if (ViewBag.StatusMessage == "Data Berjaya Dimuktamadkan. Tiada Lagi Sebarang Perubahan Boleh Dilakukan.")
-	{
-		<div class="alert adjusted alert-success fade in">
-			<button class="close" data-dismiss="alert">
-				×
-			</button>
-			<i class="fa-fw fa-lg fa fa-warning"></i>
-			<strong>Muktamad</strong> @ViewBag.StatusMessage
-		</div>
-	}
+    <div class="row">
+        <div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
+            <h1 class="page-title txt-color-blueDark">
+                <i class="fa fa-table fa-fw "></i>
+                Transaksi Sambilan
+                <span>
+                    >
+                    Sejarah Transaksi Sambilan
+                </span>
+            </h1>
+        </div>
+    </div>
+    @if (ViewBag.StatusMessage == "Data Berjaya Dimuktamadkan. Tiada Lagi Sebarang Perubahan Boleh Dilakukan.")
+    {
+        <div class="alert adjusted alert-success fade in">
+            <button class="close" data-dismiss="alert">
+                ×
+            </button>
+            <i class="fa-fw fa-lg fa fa-warning"></i>
+            <strong>Muktamad</strong> @ViewBag.StatusMessage
+        </div>
+    }
 
 
-	<!-- widget grid -->
-	<section id="widget-grid" class="">
-		<!-- row -->
-		<div class="row">
+    <!-- widget grid -->
+    <section id="widget-grid" class="">
+        <!-- row -->
+        <div class="row">
 
-			<!-- NEW WIDGET START -->
-			<article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+            <!-- NEW WIDGET START -->
+            <article class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 
-				<!-- Widget ID (each widget will need unique ID)-->
-				<div class="jarviswidget" id="wid-id-3" data-widget-editbutton="false">
-					<!-- widget options:
-					usage: <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-0" data-widget-editbutton="false">
+                <!-- Widget ID (each widget will need unique ID)-->
+                <div class="jarviswidget" id="wid-id-3" data-widget-editbutton="false">
+                    <!-- widget options:
+                    usage: <div class="jarviswidget jarviswidget-color-blueDark" id="wid-id-0" data-widget-editbutton="false">
 
-					data-widget-colorbutton="false"
-					data-widget-editbutton="false"
-					data-widget-togglebutton="false"
-					data-widget-deletebutton="false"
-					data-widget-fullscreenbutton="false"
-					data-widget-custombutton="false"
-					data-widget-collapsed="true"
-					data-widget-sortable="false"
+                    data-widget-colorbutton="false"
+                    data-widget-editbutton="false"
+                    data-widget-togglebutton="false"
+                    data-widget-deletebutton="false"
+                    data-widget-fullscreenbutton="false"
+                    data-widget-custombutton="false"
+                    data-widget-collapsed="true"
+                    data-widget-sortable="false"
 
-					-->
-					<header>
-						<span class="widget-icon"> <i class="fa fa-table"></i> </span>
-						<h2>Maklumat Transaksi</h2>
+                    -->
+                    <header>
+                        <span class="widget-icon"> <i class="fa fa-table"></i> </span>
+                        <h2>Maklumat Transaksi</h2>
 
-					</header>
+                    </header>
 
-					<!-- widget div-->
-					<div>
+                    <!-- widget div-->
+                    <div>
 
-						<!-- widget edit box -->
-						<div class="jarviswidget-editbox">
-							<!-- This area used as dropdown edit box -->
+                        <!-- widget edit box -->
+                        <div class="jarviswidget-editbox">
+                            <!-- This area used as dropdown edit box -->
 
-						</div>
-						<!-- end widget edit box -->
-						<!-- widget content -->
-						<div class="widget-body">
+                        </div>
+                        <!-- end widget edit box -->
+                        <!-- widget content -->
+                        <div class="widget-body">
 
-							<div class="row">
+                            <div class="row">
 
-								<div class="col col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1">
-									<div class="well">
-										@using (Html.BeginForm())
-										{
-											@Html.AntiForgeryToken()
-											<fieldset>
-												<div class="form-group">
-													<label class="control-label col-md-3" for="prepend">Bulan & Tahun Bekerja<font color="red">*</font></label>
-													<div class="col-md-9">
-														<div class="row">
-															<div class="col-sm-12">
-																<div class="input-group">
-																	<label class="input">
-																		<input class="form-control" name="bulantahunbekerja" data-mask="99/9999" data-mask-placeholder="-">
-																		<label class="note">
-																			Data format mm/yyyy
-																		</label>
-																	</label>
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
+                                <div class="col col-lg-8 col-md-10 col-sm-12 col-xs-12 col-lg-offset-2 col-md-offset-1">
+                                    <div class="well">
+                                        @using (Html.BeginForm())
+                                        {
+                                            @Html.AntiForgeryToken()
+                                            <fieldset>
+                                                <div class="form-group">
+                                                    <label class="control-label col-md-3" for="prepend">Bulan & Tahun Bekerja<font color="red">*</font></label>
+                                                    <div class="col-md-9">
+                                                        <div class="row">
+                                                            <div class="col-sm-12">
+                                                                <div class="input-group">
+                                                                    <label class="input">
+                                                                        <input class="form-control" name="bulantahunbekerja" data-mask="99/9999" data-mask-placeholder="-">
+                                                                        <label class="note">
+                                                                            Data format mm/yyyy
+                                                                        </label>
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
 
-												<div class="form-group">
-													<label class="control-label col-md-3" for="prepend">Bulan & Tahun Dibayar<font color="red">*</font></label>
-													<div class="col-md-9">
-														<div class="row">
-															<div class="col-sm-12">
-																<div class="input-group">
-																	<label class="input">
-																		<input class="form-control" name="bulantahundibayar" data-mask="99/9999" data-mask-placeholder="-">
-																		<label class="note">
-																			Data format mm/yyyy
-																		</label>
-																	</label>
-																</div>
-															</div>
-														</div>
-													</div>
-												</div>
-											</fieldset>
+                                                <div class="form-group">
+                                                    <label class="control-label col-md-3" for="prepend">Bulan & Tahun Dibayar<font color="red">*</font></label>
+                                                    <div class="col-md-9">
+                                                        <div class="row">
+                                                            <div class="col-sm-12">
+                                                                <div class="input-group">
+                                                                    <label class="input">
+                                                                        <input class="form-control" name="bulantahundibayar" data-mask="99/9999" data-mask-placeholder="-">
+                                                                        <label class="note">
+                                                                            Data format mm/yyyy
+                                                                        </label>
+                                                                    </label>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </fieldset>
 
-											<div class="form-actions">
-												<div class="row">
-													<div class="col-md-12">
-														<button type="button" class="btn btn-primary" id="btn">
-															Cari
-														</button>
-													</div>
-												</div>
-											</div>
-										}
-									</div>
-								</div>
-							</div>
-							<br />
-							<div id="showtable">
-							</div>
-						</div>
-						<!-- end widget content -->
+                                            <div class="form-actions">
+                                                <div class="row">
+                                                    <div class="col-md-12">
+                                                        <button type="button" class="btn btn-primary" id="btn">
+                                                            Cari
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        }
+                                    </div>
+                                </div>
+                            </div>
+                            <br />
+                            <div id="showtable">
+                            </div>
+                        </div>
+                        <!-- end widget content -->
 
-					</div>
-					<!-- end widget div -->
+                    </div>
+                    <!-- end widget div -->
 
-				</div>
-				<!-- end widget -->
+                </div>
+                <!-- end widget -->
 
-			</article>
-			<!-- WIDGET END -->
+            </article>
+            <!-- WIDGET END -->
 
-		</div>
+        </div>
 
 
 
-		<!-- end row -->
-		<!-- end row -->
+        <!-- end row -->
+        <!-- end row -->
 
-	</section>
-	<!-- end widget grid -->
+    </section>
+    <!-- end widget grid -->
 
 </div>
 <!-- END MAIN CONTENT -->
 @section pagespecific {
-	<script type="text/javascript">
+    <script type="text/javascript">
 
 		// DO NOT REMOVE : GLOBAL FUNCTIONS!
 
@@ -230,29 +230,65 @@
 				}
 			});
 
-			/* END TABLETOOLS */
-			$('div.tambah').after('<a name="btn_add" class="btn btn-success pull-right hidden-mobile" href=@Url.Action("TransaksiSambilan", "PengurusanKakitanganSambilan") ><span style="color:#FFF"><span class="fa fa-plus"></span> Tambah</span></a>');
-			$('div.muktamad').after('<a name="btn_add" id="MuktamadAll" name="Command" value="MuktamadAll" class="btn btn-success pull-right hidden-mobile" href=@Url.Action("TransaksiSambilan", "PengurusanKakitanganSambilan") ><span style="color:#FFF"><span class="fa fa-plus"></span> Muktamad</span></a>');
+			/* END TABLETOOLS <-- tak pakai ~ call dekat _ListTransaksiPartial */ 
+			//$('div.tambah').after('<a name="btn_add" class="btn btn-success pull-right hidden-mobile" href=@Url.Action("TransaksiSambilan", "PengurusanKakitanganSambilan") ><span style="color:#FFF"><span class="fa fa-plus"></span> Tambah</span></a>');
+            //$('div.muktamad').after('<a name="btn_add" id="MuktamadAll" name="Command" value="MuktamadAll" onclick="ConfirmMe()" class="btn btn-success pull-right hidden-mobile"><span style="color:#FFF"><span class="fa fa-plus"></span> Muktamad</span></a>');
 			//$('div.muktamad').after('<button type="submit" class="btn btn-warning" id="MuktamadAll" name="Command" value="MuktamadAll"><i class="fa fa-send"></i> Muktamad</button>');
 		})
 
-		$(function () {
-			function pageload() {
-				$.ajax({
-					url: "../PengurusanKakitanganSambilan/ListTransaksiPartial",
-					data: { "bulantahunbekerja": $("input[name='bulantahunbekerja']").val(), "bulantahundibayar": $("input[name='bulantahundibayar']").val() },
-					contentType: "application/json; charset=utf-8",
-					type: 'GET',
-					success: function (data) {
-						$("#showtable").html(data)
-					}
-				})
-			}
+        $(function () {
+            UpdateInput();
 
-			$("#btn").on("click", function () {
-				pageload()
+            $("#btn").on("click", function () {
+                var bulantahunbekerja = $("input[name='bulantahunbekerja']");
+                var bulantahundibayar = $("input[name='bulantahundibayar']");
+                if (bulantahunbekerja.val() != '' && bulantahundibayar != '') {
+                    pageload();
+                }
 			});
-		})
+        })  
 
-	</script>
+        function pageload() {
+            $.ajax({
+                url: "../PengurusanKakitanganSambilan/ListTransaksiPartial",
+                data: { "bulantahunbekerja": $("input[name='bulantahunbekerja']").val(), "bulantahundibayar": $("input[name='bulantahundibayar']").val() },
+                contentType: "application/json; charset=utf-8",
+                type: 'GET',
+                success: function (data) {
+                    $("#showtable").html(data)
+                }
+            })
+        }
+
+        function UpdateInput() {
+            var bulantahunbekerja = $("input[name='bulantahunbekerja']");
+            var bulantahundibayar = $("input[name='bulantahundibayar']");
+            var bulanBekerja = getParameterByName("month1");
+            var tahunBekerja = getParameterByName("year1");
+            var bulanDibayar = getParameterByName("month2");
+            var tahunDiBayar = getParameterByName("year2");
+            var startMonth = getParameterByName("startmonth");
+            if (bulanBekerja != null && tahunBekerja != null) {
+                var outString = bulanBekerja + '/' + tahunBekerja;
+                bulantahunbekerja.val(outString);
+            }
+            if (bulanDibayar != null && tahunDiBayar != null) {
+                var outString = bulanDibayar + '/' + tahunDiBayar;
+                bulantahundibayar.val(outString);
+            }
+            if (bulantahunbekerja.val() != '' && bulantahundibayar != '') {
+                pageload();
+            }
+        }
+
+        function getParameterByName(name, url) {
+            if (!url) url = window.location.href;
+            name = name.replace(/[\[\]]/g, '\\$&');
+            var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+                results = regex.exec(url);
+            if (!results) return null;
+            if (!results[2]) return '';
+            return decodeURIComponent(results[2].replace(/\+/g, ' '));
+        }
+    </script>
 }
