--- a/webapp/Views/PengurusanKakitanganSambilan/_ListTransaksiPartial.cshtml
+++ b/webapp/Views/PengurusanKakitanganSambilan/_ListTransaksiPartial.cshtml
@@ -10,65 +10,68 @@
 		<strong>Muktamad</strong> @ViewBag.StatusMessage
 	</div>
 }
-<div class="well">
-	<fieldset>
-		<div class="widget-body no-padding">
-			<table id="datatable_tabletools" class="table table-striped table-bordered table-hover" width="100%">
-				<thead>
-					<tr>
-						<th width="1%">#</th>
-						<th width="10%">No. Pekerja</th>
-						<th>Nama Pekerja</th>
-						<th width="1%">Tindakan</th>
+    <div class="well">
+        @if (Model != null)
+        {
+            <fieldset>
+                <div class="widget-body no-padding">
+                    <table id="datatable_tabletools" class="table table-striped table-bordered table-hover" width="100%">
+                        <thead>
+                            <tr>
+                                <th width="1%">#</th>
+                                <th width="10%">No. Pekerja</th>
+                                <th>Nama Pekerja</th>
+                                <th width="1%">Tindakan</th>
 
-					</tr>
-				</thead>
-				<tbody>
+                            </tr>
+                        </thead>
+                        <tbody>
 
-					@{ var i = 0; }
-					@foreach (var item in Model)
-					{
-						@Html.Hidden("bulantahunbekerja")
-						@Html.Hidden("bulantahundibayar")
+                            @{ var i = 0; }
+                            @foreach (var item in Model)
+                            {
+                                @Html.Hidden("bulantahunbekerja")
+                                @Html.Hidden("bulantahundibayar")
 
-						i++;
-						ViewBag.icount = i;
-						<tr>
+                                i++;
+                                ViewBag.icount = i;
+                                <tr>
 
-							<td>
-								@ViewBag.icount
-							</td>
-							<td>
-								@item.HR_NO_PEKERJA
-							</td>
-							<td>
-								@item.HR_NAMA_PEKERJA
-							</td>
-							<td align="center">
-								<div class="btn-group col-12">
-									@if (item.MUKTAMAD == 0)
-									{
-										<a class="btn btn-xs btn-default btn-circle" title="Kemaskini"
-                                           href='@Url.Action("Sejarah", "KakitanganSambilan",
+                                    <td>
+                                        @ViewBag.icount
+                                    </td>
+                                    <td>
+                                        @item.HR_NO_PEKERJA
+                                    </td>
+                                    <td>
+                                        @item.HR_NAMA_PEKERJA
+                                    </td>
+                                    <td align="center">
+                                        <div class="btn-group col-12">
+                                            @if (item.MUKTAMAD == 0)
+                                            {
+                                                <a class="btn btn-xs btn-default btn-circle" title="Kemaskini"
+                                                   href='@Url.Action("Sejarah", "KakitanganSambilan",
                                                 new { HR_PEKERJA = item.HR_NO_PEKERJA,
                                                     tahunbekerja = item.LIST_HR_TAHUN,
                                                     bulanbekerja = item.LIST_HR_BULAN_BEKERJA,
                                                     tahundibayar = item.LIST_HR_TAHUN_DIBAYAR,
                                                     bulandibayar = item.LIST_HR_BULAN_DIBAYAR })'><i class="fa fa-money"></i></a>
-									}
-									else if (item.MUKTAMAD == 1)
-									{
-										<button class="btn btn-xs btn-default btn-circle" disabled title="Transaksi Sambilan"><i class="fa fa-money"></i></button>
-									}
-								</div>
-							</td>
-						</tr>
-					}
-				</tbody>
-			</table>
-		</div>
-	</fieldset>
-</div>
+                                            }
+                                            else if (item.MUKTAMAD == 1)
+                                            {
+                                                <button class="btn btn-xs btn-default btn-circle" disabled title="Transaksi Sambilan"><i class="fa fa-money"></i></button>
+                                            }
+                                        </div>
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </fieldset>
+        }
+    </div>
 	<script>
 		$(document).ready(function () {
 			var responsiveHelper_datatable_tabletools = undefined;
@@ -120,28 +123,29 @@
 			});
 
 			$('div.tambah').after('<a name="btn_add" class="btn btn-success pull-right hidden-mobile" href=@Url.Action("Sejarah", "KakitanganSambilan") ><span style="color:#FFF"><span class="fa fa-plus"></span> Tambah</span></a>');
-			$('div.muktamad').after('<a name="btn_muktamad" id="btn_muktamad" class="btn btn-warning pull-right hidden-mobile" onclick="MuktamadAll()" ><span style="color:#FFF"><span class="fa fa-plus"></span> Muktamad</span></a>');
+			$('div.muktamad').after('<a name="btn_muktamad" id="btn_muktamad" class="btn btn-warning pull-right hidden-mobile"><span style="color:#FFF"><span class="fa fa-plus"></span> Muktamad</span></a>');
 		})
 
 		$(function () {
-			function MuktamadAll() {
-				debugger;
-				$.ajax({
-					url: "../../PengurusanKakitanganSambilan/MuktamadAll",
-					data: { "bulantahundari": $("input[name='bulantahunbekerja']").val(), "bulantahunsehingga": $("input[name='bulantahundibayar']").val() },
-					contentType: "application/json; charset=utf-8",
-					type: 'GET',
-					success: function (data) {
-						$("#showtable").html(data)
-					}
-				})
-			}
 			$("#btn_muktamad").on("click", function () {
-				MuktamadAll()
+                ConfirmMe();
 			});
+        })
 
-		})
+        function MuktamadAll() {
+            debugger;
+            $.ajax({
+                url: "../../PengurusanKakitanganSambilan/MuktamadAll",
+                data: { "bulantahundari": $("input[name='bulantahunbekerja']").val(), "bulantahunsehingga": $("input[name='bulantahundibayar']").val() },
+                contentType: "application/json; charset=utf-8",
+                type: 'GET',
+                success: function (data) {
+                    $("#showtable").html(data)
+                }
+            })
+        }
 
+        //edit Transaksi Kakitangan sambilan
 		var EditBonus = '../../PengurusanKakitanganSambilan/EditBonus';
 		$(function () {
 			$(".EditBonus").click(function () {
@@ -167,6 +171,24 @@
 			$("#closbtn").click(function () {
 				$('#EditBonusModal').modal('hide');
 			});
-		});
+        });
+
+        //confirmation modal utk Muktamad all
+        function ConfirmMe() {
+            $.confirm({
+                title: 'Muktamad',
+                content: 'Anda pasti hendak muktamad semua transaksi sambilan?',
+                buttons: {
+                    Muktamad: function () {
+                        //$.alert('Pasti');
+                        MuktamadAll();
+                    },
+                    Kembali: function () {
+                        console.log('cancelled');
+                    }                    
+                }
+            });
+            //TODO            
+        }
 
 	</script>
